Run update-remote.sh on groovy